# dj-util

./: .gitignore  .pre-commit-config.yaml  AUDIO_CONVERSION.md  BANDCAMP_AUTOMATOR_README.md  CLAUDE.md  FILE_PATH_MATCHER_README.md  FORCE_REANALYZE.md  IMPLEMENTATION_STATUS.md  LINK_LOCAL_FILES_SPEC.md  LINK_LOCAL_IMPLEMENTATION_STATUS.md  LINK_LOCAL_QUICKSTART.md  LINK_LOCAL_REANALYZE.md  NEW_FEATURES_SUMMARY.md  README.md  WARP.md  all_bass_report.md  bandcamp_wishlist_automator.py  diagnose_track_ids.py  file_path_matcher.py  force_reanalyze_track.py  hard_groove_report.md  minimal_hypno_files_linked.md  minimal_hypnotic_techno_match_report.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_wishlist_automator.sh  setup.py  setup_bandcamp_automator.sh  test_interactive.py  test_selection_input.py
.serena/: project.yml
.specify/memory/: constitution.md
specs/001-when-the-command/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-when-the-command/contracts/: cli-export.yaml
src/cli/: __main__.py  bandcamp_command.py  export_command.py  link_local_command.py  match_files_command.py
src/lib/: csv_parser.py  fuzzy_matcher.py  path_utils.py  progress.py  validators.py
src/models/: csv_export.py  music_file.py  tag.py  tag_selection.py  track.py  track_record.py
src/services/: audio_converter.py  bandcamp_wishlist.py  csv_exporter.py  file_path_matcher.py  link_local_service.py  rekordbox.py  tag_selector.py
tests/cli/: test_export_command.py
tests/contract/: test_csv_format_contract.py  test_rekordbox_contract.py
tests/integration/: test_error_scenarios.py  test_export_workflow.py  test_tag_selection_flow.py
tests/unit/: test_audio_converter.py
